commit 4a46d05d5cf4b04b401a3f86a5a2bb3611a7c9aa
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sun Jan 3 02:15:28 2010 +0900

    aufs: tiny, add a forgotten configuration
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 5f80ac5970a39e18c00db69889ef641aef9e4f48
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sat Jan 2 16:32:31 2010 +0900

    aufs: tiny, new abstract function vfsub_dentry_open()
    
    The main purpose of this small wrapper is to minimize the confilict at
    merging GIT branches in the future.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 3d6203a320b5d212836f05124a96a165e7490426
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sat Jan 2 13:09:21 2010 +0900

    aufs: recover a merge conflict, the internal file open
    
    The commit 5482ca4cb046bf399b605174327c61688d39a21c
    	"Merge branch 'aufs2-30' into aufs2-31"
    got conflict fs/aufs/file.c.
    I might fail recovering it. There left an extra internal file open.
    Remove it.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 4b70e6f04d4292d8b5ce6cd7ac7371e68eab9175
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sat Jan 2 12:21:03 2010 +0900

    aufs: bugfix, unlock mmap_sem temporary using BKL
    
    The aufs rwsem should be acquired before mm->mmap_sem. But mm->mmap_sem
    is acquired before ->mmap(). aufs_mmap() has to release it temporary
    with using BKL.
    I don't think it is a good approach, but I don't know other way.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit e5843a8384a3d064b57bccb1d32a3cd7327121a9
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Dec 24 23:52:24 2009 +0900

    aufs: tiny, add 'unlikely' in an error path
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 9244a055d21432cca2ecf264b17c675c55c5ee88
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Dec 24 14:38:21 2009 +0900
